--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="time4">Good Night!!</string>
     <string name="hint">write you message</string>
     <string name="send">Send</string>
+    <string name="start_msg_injury">Hey!! What is your injury? Can you please tell me?</string>
+    <string name="end_of_conversation">Take care of yourself. Bye.</string>
 </resources>
